# aschWirzard

.qi/: worktree.xml
aschWizrd/: CMakeLists.txt  CMakeLists.txt~  main.cpp  myJsonFile.json  note.xml  note.xml~  qiproject.xml
aschWizrd/build-naoqi-sdk/: CMakeCache.txt  CTestTestfile.cmake  Makefile  aschWizrd.cbp  cmake_install.cmake
aschWizrd/build-naoqi-sdk/sdk/share/qi/: path.conf
aschWizrd/build-sys-linux-x86_64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dependencies.cmake
aschWizrd/build-sys-linux-x86_64/sdk/share/qi/: path.conf
qtcreator-build/: CMakeCache.txt
